# dtkai

./: CMakeLists.txt  test-coverage.sh
.reuse/: dep5
debian/: control.1  libdtkai.install  rules
examples/: CMakeLists.txt  dtkaivalidator.cpp  presentation_demo.cpp
examples/chat/: CMakeLists.txt  chat.cpp  chat_enhanced.cpp  model_info_test.cpp
examples/nlp/: CMakeLists.txt  chat.cpp  chat_enhanced.cpp  chat_stream.cpp  functioncalling.cpp
examples/other/: CMakeLists.txt  model_info_test.cpp
examples/speech/: CMakeLists.txt  speechtotext_realtime.cpp  texttospeech_streaming_demo.cpp  texttospeech_test.cpp
examples/vision/: CMakeLists.txt  image_recognition_demo.cpp  ocr_client_test.cpp  test_resources.qrc
include/dtkai/: DAIError  DEmbeddingPlatform  DImageRecognition  DModelManager  DTextToSpeech  daierror.h  dchatcompletions.h  dfunctioncalling.h  dimagerecognition.h  dmodelmanager.h  docrrecognition.h  dspeechtotext.h  dtexttospeech.h  dtkaitypes.h
include/dtkai/nlp/: dchatcompletions.h  dembeddingplatform.h  dfunctioncalling.h
include/dtkai/speech/: DSpeechToText  DTextToSpeech  dspeechtotext.h
include/dtkai/vision/: DOCRRecognition  docrrecognition.h
src/: CMakeLists.txt  dmodelmanager.cpp
src/chat/: dchatcompletions.cpp  dchatcompletions_p.h  dfunctioncalling.cpp  dfunctioncalling_p.h  dimagerecognition.cpp  dimagerecognition_p.h  dmodelmanager.cpp  docrrecognition.cpp  docrrecognition_p.h  dspeechtotext.cpp  dspeechtotext_p.h  dtexttospeech.cpp
src/embedding/: dembeddingplatform.cpp  dembeddingplatform_p.h
src/nlp/: dchatcompletions.cpp  dchatcompletions_p.h  dembeddingplatform.cpp  dembeddingplatform_p.h  dfunctioncalling.cpp  dfunctioncalling_p.h
src/speech/: dspeechtotext.cpp  dspeechtotext_p.h  dtexttospeech.cpp  dtexttospeech_p.h
src/vision/: dimagerecognition.cpp  dimagerecognition_p.h  docrrecognition.cpp  docrrecognition_p.h
tests/: CMakeLists.txt
tests/common/: test_base.h  test_utils.h
tests/unit/: CMakeLists.txt  main.cpp
tests/unit/core/: ut_basic_interfaces.cpp  ut_daierror.cpp  ut_data_types.cpp  ut_dmodelmanager.cpp
tests/unit/embedding/: ut_embedding.cpp
tests/unit/nlp/: ut_dchatcompletions.cpp  ut_embedding.cpp
tests/unit/speech/: ut_dspeechtotext.cpp  ut_dtexttospeech.cpp
tests/unit/vision/: ut_dimagerecognition.cpp  ut_docrrecognition.cpp
